# gpssmProj

./: .gitignore  PFCS.ipynb  README.md  check-object-data.ipynb  main.py  main.sh  pyproject.toml  synchro_video_eef_position.py
Datasets/: functions.py
EnVI/: demo_EnVI.py  nascar_OEnVI.py  syn_EnVI.py  syn_OEnVI.py  syn_OEnVI_new.py  sysID_EnVI.py
EnVI/data/: real.py  src.py  synthetic.py
EnVI/models/: EnVI.py  EnVI_NN.py  GPModels.py  GPSSMs.py  InferNet.py  evaluation.py
EnVI/utils/: plotResult.py  settings.py
high_dim_GPSSM/: L96.py  L96_efficiency_comp.py  _sysID.py  _sysID_EGP.py  ns_kink.py  utils_h.py
high_dim_GPSSM/data/: real.py  synthetic.py
high_dim_GPSSM/demo/: BNN_demo.py  GP.py  non_stationary_demo.py  sparse_GP.py
high_dim_GPSSM/modules/: EGPSSM.py  Filter.py  GPSSM_GPyTorch.py  gpModel.py  gpTorch.py
high_dim_GPSSM/modules/realNVP/: RealNVP.py
high_dim_GPSSM/modules/torchbnn/: __init__.py  functional.py
high_dim_GPSSM/modules/torchbnn/modules/: __init__.py  batchnorm.py  conv.py  linear.py  loss.py  module.py
high_dim_GPSSM/modules/torchbnn/utils/: __init__.py  freeze_model.py
models/: GP.py  GPSSMs.py  NFs.py  RecogModel.py  dataset.py  utils.py  utils_data.py
